pruebas unitarias a los archivos IMPL agregadas, algunas modificadas segun logica de software acordada